--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>4.5.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
