--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pt.iceman</groupId>
     <artifactId>chimerium</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-ALPHA</version>
 
     <dependencies>
         <dependency>
